--- a/personal-portfolio/src/PortfolioContainer/Home/NavBar.css
+++ b/personal-portfolio/src/PortfolioContainer/Home/NavBar.css
@@ -56,13 +56,11 @@
     border: none;
     font-size: 1.4rem;
      background: #ffffff;
+     display: none;
   }
-  .navbar-display-none {
+  /* .fa-bars {
     display: none;
-  }
-  .fa-bars {
-    display: none;
-  }
+  } */
  .dark-theme nav,
  .dark-theme ul,
  .dark-theme .navbutton,
@@ -94,7 +92,7 @@
 .dark-theme .contact-wrapper:hover{
   background-color: orange;
 }
-@media (max-width:600px) {
+@media (max-width:768px) {
   nav {
     width: 100%;
     flex-direction: column;
