--- a/personal-portfolio/src/PortfolioContainer/About Me/Aboutme.css
+++ b/personal-portfolio/src/PortfolioContainer/About Me/Aboutme.css
@@ -1,9 +1,10 @@
 .about-container{
      width: 100%;
     padding-top: 5rem; 
+    margin: 0;
 }
 .wrapper{
- max-width: 80% ; 
+ width: 80%; 
  margin: 0 auto;
  padding: 3rem 0;
  border-radius: 10px;
@@ -24,7 +25,7 @@
 .about-sub-container{
    max-width: 70%;
     margin: 0 auto;
-    padding: 5rem;
+    padding: 3rem 0;
     border-radius: 10px;
     background-color:#FCB954;
 }  
@@ -32,7 +33,9 @@
    background-color:orange;  
 }
 #about-button{
-   margin-left: 480px;
+   margin: 0 auto;
+    display: flex;
+    justify-content: center;
    text-decoration: none;
    background-color: white;
    border:  2px solid;
@@ -46,5 +49,17 @@
    border-radius: 8px;
   border: orange 2px solid;
  text-decoration: none;
+}
+@media(max-width: 700px){
+   .wrapper{
+      width: 90% ;
+      padding: 1rem 0;
+
+   }
+   .about-sub-container{
+      width: 100%;
+      padding: 1rem 0;
+      font-size: 10px;
+   }
 }
 
