--- a/personal-portfolio/src/PortfolioContainer/ContactMe/Contact.css
+++ b/personal-portfolio/src/PortfolioContainer/ContactMe/Contact.css
@@ -59,7 +59,6 @@
     border-color: orange;
 }
 #submit-button{
-    margin-left: 240px;
   text-decoration: none;
   background-color: white;
   border:  2px solid;
@@ -73,4 +72,34 @@
     border-radius: 8px;
     border: orange 2px solid;
    text-decoration: none;
+}
+@media(max-width: 700px){
+    .contact-wrapper{
+        width: 90%; 
+        padding: 0 1rem;
+        
+    }
+    .contact-wrapper h1{
+        padding-top: 15px;
+        font-size:22px;
+    }
+    .contact-details{
+        width: 100%;
+    }
+    .contact-details h1,h3,h4,p{
+         font-size:15px;
+    }
+    .contact-sub-container{
+        width: 100%;
+        margin-bottom: 2rem;
+        font-size:15px;
+    }
+    .contact-flex{
+        display:flex;
+        flex-direction: column;
+    }
+    #submit-button{
+        margin-bottom: 2rem;
+    }
+
 }
