--- a/personal-portfolio/src/PortfolioContainer/Projects/Project.css
+++ b/personal-portfolio/src/PortfolioContainer/Projects/Project.css
@@ -1,13 +1,13 @@
 .projects-container{
 width: 100%;
 padding-top: 5rem;
-margin:  0;
+margin: 0;
 }
 .project-wrapper{
     width: 90%; 
-    margin: 0;
+    margin: 0 auto;
     padding: 3rem 0;
-    margin-left: 60px; 
+    text-align: center;
     border-radius: 10px;
     font-family: 'Quicksand', sans-serif;
     color: white;
@@ -31,6 +31,7 @@ justify-content: space-around;
 }
 .project img{
     width: 100%;
+    object-fit: cover;
 }
 .project-title{
     text-align: center;
@@ -48,10 +49,12 @@ justify-content: space-around;
     transform: scale(1.1);
 }
 #project-button{
-    margin-left: 500px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
    text-decoration: none;
    background-color: white;
-   border:  2px solid;
+   border: 2px solid;
    border-radius: 8px;
    font-weight: 600;
    font-size: 15px;
@@ -62,4 +65,13 @@ justify-content: space-around;
     border-radius: 8px;
   border: orange 2px solid;
  text-decoration: none;
+}
+@media(max-width:700px){
+    .project-flex{
+        flex-direction: column;
+    }
+    .project{
+        max-width: none;
+        width: 100%;
+    }
 }
